--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,18 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Dependencies
+node_modules/
 
-# dependencies
-backend/node_modules
-backend/.env
-frontend/node_modules
-frontend/.pnp
-frontend/.pnp.js
+# Environment files
+*.env
+*.env.local
+*.env.*.local
 
-# testing
-frontend/coverage
+# Build outputs
+build/
+dist/
+coverage/
 
-# production
-frontend/build
-
-# misc
-frontend/.DS_Store
-frontend/.env.local
-frontend/.env.development.local
-frontend/.env.test.local
-frontend/.env.production.local
-
+# Misc
+.DS_Store
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
